@@ -1,6 +1,6 @@
 /* { dg-do compile } */
 /* { dg-require-effective-target vect_float } */
-/* { dg-options "-O3 -fopt-info-vec-optimized" } */
+/* { dg-additional-options "-O3 -fopt-info-vec-optimized" } */
 
 /* PR other/33426 */
 /* Testing whether #pragma ivdep is working.  */
@@ -14,6 +14,6 @@ void foo(int n, int *a, int *b, int *c, int *d, int *e) {
 }
 
 /* { dg-message "loop vectorized" "" { target *-*-* } 0 } */
-/* { dg-bogus "version" "" { target *-*-* } 0 } */
-/* { dg-bogus "alias" "" { target *-*-* } 0 } */
+/* { dg-bogus " version" "" { target *-*-* } 0 } */
+/* { dg-bogus " alias" "" { target *-*-* } 0 } */
 /* { dg-final { cleanup-tree-dump "vect" } } */
