@@ -1,3 +1,9 @@
+2013-10-25  Tobias Burnus  <burnus@net-b.de>
+
+	* g++.dg/vect/pr33426-ivdep.cc: Use dg-options.
+	* gfortran.dg/vect/vect-do-concurrent-1.f90: Ditto.
+	* testsuite/gcc.dg/vect/vect-ivdep-1.c: Ditto.
+
 2013-10-25  Yufeng Zhang  <yufeng.zhang@arm.com>
 
 	* gcc.dg/wmul-1.c: New test.
